# core

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  PRODUCT.md  README.md  SECURITY.md  auto-sales-automation.sh  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-body.md  sample.md  turbo.json
.beads/: .beads-credential-key  metadata.json
.claude-plugin/: marketplace.json
.context/: codex-session-id
.github/: CODEX_TASKS.md  copilot-instructions.md
.openclaw/: integrations.json  openclaw.json  pairing.json  profiles.json
Formula/: mac-optimizer.rb
apps/tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
apps/tauri/src-tauri/binaries/: core-voice-aarch64-apple-darwin
apps/tauri/src-tauri/capabilities/: default.json  remote.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: capture.rs  coding_config.rs  inbox_panel.rs  inbox_poller.rs  lib.rs  main.rs  pty.rs  scratchpad_panel.rs  screen_context.rs  speech.rs  voice_hotkey.rs  voice_panel.rs
apps/tauri/src-tauri/src/apps/: default.rs  mod.rs  slack.rs
apps/tauri/src-tauri/swift-voice/: .gitignore  Package.swift
apps/tauri/src-tauri/swift-voice/Sources/CoreVoice/: main.swift
dashboard/: dashboard.py
docker/: Dockerfile  Dockerfile.gateway  Dockerfile.neo4j  entrypoint.sh  llmproxy-providers.json  nginx-gateway.conf
docs/: TELEMETRY.md  docs.json  getting-started.mdx  introduction.mdx  migrating-from-v1.mdx  openapi.json  openclaw-browser-setup.md  tasks.json
galaxia/: galaxia-vector-core.py
(+1988 files in other folders)
